--- a/src/about.njk
+++ b/src/about.njk
@@ -1,4 +1,9 @@
 ---
 layout: layouts/default.njk
 ---
-<h1>About</h1>
+<div class="hero">
+  <h1>About</h1>
+</div>
+{% Container "800px" %}
+  <p>Home content</p>
+{% endContainer %}
