--- a/src/index.njk
+++ b/src/index.njk
@@ -1,4 +1,9 @@
 ---
 layout: layouts/default.njk
 ---
+<div class="hero">
   <h1>Home</h1>
+</div>
+{% Container "800px" %}
+  <p>Home content</p>
+{% endContainer %}
