--- a/src/about.njk
+++ b/src/about.njk
@@ -5,5 +5,5 @@ layout: layouts/default.njk
   <h1>About</h1>
 </div>
 {% Container "800px" %}
-  <p>Home content</p>
+  <p>About content</p>
 {% endContainer %}
