--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -9,7 +9,7 @@
   {%- set css %}
     {% include "css/style.css" %}
   {% endset %}
-  <style>{{ css | safe }}</style>
+  <style>{{ css | cssmin | safe }}</style>
 
 </head>
 <body>
