Add images to hero
Signed-off-by: Gordon Doskas <gordon2012@users.noreply.github.com>

--- a/src/_includes/css/style.css
+++ b/src/_includes/css/style.css
@@ -34,11 +34,14 @@ main {
 .hero {
   background: #666;
   color: white;
-  height: 20vh;
+  height: 30vh;
 
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.hero-big {
+  height: 50vh;
 }
 
 /* SECTIONS */
