--- a/src/about.njk
+++ b/src/about.njk
@@ -1,6 +1,13 @@
 ---
 layout: layouts/default.njk
 ---
+<style>
+  .hero {
+    background-image: url('../img/space.jpg');
+    background-size: cover;
+    background-position: center;
+  }
+</style>
 <div class="hero">
   <h1>About</h1>
 </div>
