--- a/src/index.njk
+++ b/src/index.njk
@@ -1,7 +1,14 @@
 ---
 layout: layouts/default.njk
 ---
-<div class="hero">
+<style>
+  .hero {
+    background-image: url('img/space-mountain.jpg');
+    background-size: cover;
+    background-position: center;
+  }
+</style>
+<div class="hero hero-big">
   <h1>Home</h1>
 </div>
 {% Container "800px" %}
